@@ -49,7 +49,8 @@ IF(NOT DEFINED _MANAGE_MESSAGE_CMAKE_)
 	ENDIF(NOT DEFINED MANAGE_MESSAGE_LEVEL)
 	IF(${level} GREATER ${MANAGE_MESSAGE_LEVEL})
 	ELSE(${level} GREATER ${MANAGE_MESSAGE_LEVEL})
-	    LIST(GET MANAGE_MESSAGE_LABELS ${level} _label)
+	    MATH(EXPR _lvl ${level}-1)
+	    LIST(GET MANAGE_MESSAGE_LABELS ${_lvl} _label)
 	    IF(${level} EQUAL 1)
 		MESSAGE(FATAL_ERROR "${_label}${msg}")
 	    ELSE(${level} EQUAL 1)
