@@ -1,8 +1,31 @@
-# - Target for release chores
+# - Common targets for release chores.
+# This module provides common targets for release or post-release chores.
+#
+#  Defines following targets:
+#  + changelog_update: Update changelog by copying ChangeLog to ChangeLog.prev
+#    and RPM-ChangeLog to RPM-ChangeLog. This target should be execute before
+#     starting a new version.
+#  + release: Do the release chores.
+#    Reads or define following variables:
+#    + RELEASE_TARGETS: Depended targets for release.
+#      Note that the sequence of the target does not guarantee the
+#      sequence of execution.
+#
+#  + after_release: Chores after release.
+#    This depends on changelog_update, commit_after_release, and
+#    push_after_release.
+#
 
-IF(NOT DEFINED _MANAGE_RELEASE_)
-    SET(_MANAGE_RELEASE_ "DEFINED")
+IF(NOT DEFINED _MANAGE_RELEASE_CMAKE_)
+    SET(_MANAGE_RELEASE_CMAKE_ "DEFINED")
     INCLUDE(ManageMaintainerTargets)
+
+    ADD_CUSTOM_TARGET(changelog_update
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/ChangeLog ${CMAKE_SOURCE_DIR}/ChangeLog.prev
+	COMMAND ${CMAKE_COMMAND} -E copy ${RPM_BUILD_SPECS}/RPM-ChangeLog ${RPM_BUILD_SPECS}/RPM-ChangeLog.prev
+	DEPENDS ${CMAKE_SOURCE_DIR}/ChangeLog ${RPM_BUILD_SPECS}/RPM-ChangeLog
+	COMMENT "Changelogs are updated for next version."
+	)
 
     ## Target: release
 
@@ -14,12 +37,10 @@ IF(NOT DEFINED _MANAGE_RELEASE_)
 	ADD_DEPENDENCIES(release ${RELEASE_TARGETS})
     ENDIF(RELEASE_TARGETS)
 
-    ADD_CUSTOM_TARGET(post_release)
-
-
-    ADD_DEPENDENCIES(post_release push_post_release)
-    ADD_DEPENDENCIES(push_post_release commit_after_release)
+    ADD_CUSTOM_TARGET(after_release)
+    ADD_DEPENDENCIES(after_release push_after_release)
+    ADD_DEPENDENCIES(push_after_release commit_after_release)
     ADD_DEPENDENCIES(commit_after_release changelog_update)
 
-ENDIF(NOT DEFINED _MANAGE_RELEASE_)
+ENDIF(NOT DEFINED _MANAGE_RELEASE_CMAKE_)
 
