@@ -84,7 +84,6 @@ IF(NOT DEFINED _MANAGE_RELEASE_ON_FEDORA_)
 
     # Need the definition of source version control first, as we need to check tag file.
     INCLUDE(ManageSourceVersionControl)
-    INCLUDE(ManageRelease)
     INCLUDE(ManageMessage)
 
     MACRO(_use_koji_make_targets srpm)
@@ -337,7 +336,6 @@ IF(NOT DEFINED _MANAGE_RELEASE_ON_FEDORA_)
 	IF(EXISTS $ENV{HOME}/.fedora-upload-ca.cert)
 	    FIND_PROGRAM(BODHI bodhi)
 	    IF(BODHI STREQUAL "BODHI-NOTFOUND")
-		IF(FEDPKG STREQUAL "FEDPKG-NOTFOUND")
 		M_MSG(${M_OFF} "Program bodhi is not found! bodhi support disabled.")
 		SET(_disabled 1)
 	    ENDIF(BODHI STREQUAL "BODHI-NOTFOUND")
@@ -428,9 +426,10 @@ IF(NOT DEFINED _MANAGE_RELEASE_ON_FEDORA_)
 		ADD_DEPENDENCIES(bodhi_new fedpkg_build)
 	    ENDIF("${_target_exists}" STREQUAL "true")
 	ENDIF(_disabled EQUAL 0)
-ENDMACRO(USE_BODHI)
+    ENDMACRO(USE_BODHI)
 
     MACRO(RELEASE_ON_FEDORA srpm)
+	INCLUDE(ManageRelease)
 	USE_FEDPKG(${srpm} ${ARGN})
 	USE_BODHI(${ARGN})
 	ADD_CUSTOM_TARGET(release_on_fedora)
