@@ -60,7 +60,7 @@ INSTALL(FILES ${INSTALL_DOCS}
 ####################################################################
 # Packing
 #
-SET(MAINTAINER_SETTING "MAINTAINER_SETTING_NO_PACK")
+SET(MAINTAINER_SETTING "${CMAKE_SOURCE_DIR}/MAINTAINER_SETTING_NO_PACK")
 INCLUDE(PackSource)
 INCLUDE(PackRPM)
 INCLUDE(ManageReleaseOnFedora)
@@ -81,8 +81,8 @@ USE_MOCK("${RPM_BUILD_SPECS}/project.spec.in")
 ####################################################################
 # Hosting and Release
 #
-IF(EXISTS ${CMAKE_SOURCE_DIR}/${MAINTAINER_SETTING})
-    MAINTAINER_SETTING_READ_FILE("${CMAKE_SOURCE_DIR}/${MAINTAINER_SETTING})"
+IF(EXISTS ${MAINTAINER_SETTING})
+    MAINTAINER_SETTING_READ_FILE(${MAINTAINER_SETTING}
 	"${RPM_BUILD_SOURCES}/${PACK_SOURCE_FILE_NAME}")
 
     RELEASE_ON_FEDORA("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}"
