@@ -4,9 +4,14 @@ BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=
 [Changes]
 - Remove f13 from FEDORA_CURRENT_RELEASE_TAGS, as Fedora 13 is end of life.
-- ManageMessages: New module.
+- ManageMessage: New module.
 - ManageRelease: New module.
-- Now manageReleaseOnFedora include ManageMaintainerTargets
+- Now ManageReleaseOnFedora includes ManageMaintainerTargets
 - Modules are shown what they include and included by.
 - Now tag depends on koji_scratch_build, while fedpkg_commit master
   (or other primary branch) depends directly on tag.
+- MAINTAINER_SETTING_READ_FILE now can either use MAINTAINER_SETTING, or take
+  one argument that define maintainer setting file.
+- MANAGE_MAINTAINER_TARGETS_UPLOAD no longer require argument hostService,
+  It now relies on HOST_SERVICES from maintainer setting file.
+
